Fix overflow on mobile

--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -63,6 +63,8 @@ p {
     align-items: center;
 
     flex: 1 1 auto;
+
+    overflow: hidden;
 }
 
 .flashcard {
